--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div id="game-container">
-    <!-- Game will be rendered here -->
-  </div>
-  <script src="script.js"></script>
+    <div id="game-container">
+        <!-- Game content will be rendered here by JavaScript -->
+    </div>
+    
+    <!-- Load modular JS with type="module" -->
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
